# RecoilEngine-AppleSilicon

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  IMPROVEMENTS.md  Makefile  README.md  SECURITY.md  SYNC_VALIDATION.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feedback.yml
.github/workflows/: assemble.yml  engine-build.yml  publish-site.yml  synctest.yml
AI/Skirmish/: CMakeLists.txt
AI/Wrappers/CUtils/: Util.c
AI/Wrappers/Cpp/src/: AIFloat3.cpp  AIFloat3.h
coding-agents/: ENGINE_PERFORMANCE.md
cont/LuaUI/: debug.lua
cont/base/springcontent/: CMakeLists.txt  EngineOptions.lua
cont/base/springcontent/LuaGadgets/Gadgets/: README.txt
doc/: StartScriptFormat.txt
doc/site/: mise.ci.toml  mise.toml
doc/site/content/: _index.md
doc/site/content/articles/: start-script-format.md
doc/site/content/changelogs/: _index.markdown
docker-build-v2/: build.sh
docs/: AGENT_FAILURE_MODES.md  LESSONS.md  MAINTENANCE.md  PORTING_PRINCIPLES.md  SOUND_WARNINGS_CATALOG.md  UPSTREAM_CANDIDATES.md  VERSIONS.md
logs/: double-fn-2025lane-clang.txt  double-fn-vm26.txt
message-config/: README.md  assemble.py  messages.json
message-config/examples/: 2026-07-15-welcome.jsonc  2026-07-20-upgrade-0.2.jsonc  2026-07-25-range-1.1-2.3.jsonc  2026-08-01-online-live.jsonc  2026-08-10-block-0.15.jsonc
message-config/messages/: 2026-07-19-unofficial-build.jsonc
packaging/: AppIcon.icns  DMGIcon.icns  NOTICE  bundle-smoke.sh  collect-licenses.sh  consent-dialog.swift  dmg-layout.py  download-content.sh  entitlements.plist  error-dialog.swift  extract-launcher-config.py  launcher.sh  license-audit.sh  message-check.swift  progress-window.swift  release-build.sh  release-notes-header.md
packaging/AppIcon.icon/: icon.json
packaging/LICENSES/: BSD-3-Clause-collection.txt  MANIFEST.tsv  MIT-collection.txt  image-codecs-collection.txt
packaging/test/: launcher-test.sh  message-check-test.sh
patches/mesa/: 0001-kosmickrisp-log-loaded-dylib-path-version-at-instanc.patch  0002-kosmickrisp-KK_MATH_MODE-knob-safe-relaxed-fast-KK_C.patch  0003-zink-ZINK_NO_TRIANGLE_FANS-knob-to-force-zink-side-f.patch  0004-zink-rpath-vulkan-loader.patch
rts/: CMakeLists.txt
rts/Game/: Camera.cpp  Camera.h  Game.cpp  LoadScreen.cpp  UnsyncedGameCommands.cpp
rts/Game/UI/: GuiHandler.cpp  GuiHandler.h  KeyBindings.cpp  MouseHandler.cpp  MouseHandler.h
rts/Lua/: CMakeLists.txt  LuaConstEngine.cpp  LuaConstPlatform.cpp  LuaDebugExtra.cpp  LuaDebugExtra.h  LuaDefs.h  LuaHandle.cpp  LuaHandle.h  LuaHandleSynced.cpp  LuaIntro.cpp  LuaMenu.cpp  LuaParser.cpp  LuaSyncedCtrl.cpp  LuaSyncedMoveCtrl.cpp  LuaSyncedRead.cpp  LuaSyncedRead.h  LuaUI.cpp  LuaUI.h  LuaUnsyncedCtrl.cpp  LuaUnsyncedRead.cpp  LuaUnsyncedRead.h  LuaVAOImpl.cpp
rts/Net/: NetCommands.cpp
rts/Rendering/: GlobalRendering.cpp  ModelsDataUploader.cpp
rts/Rendering/Env/: ISky.cpp  ISky.h
rts/Rendering/GL/: StreamBuffer.cpp  StreamBuffer.h  glxHandler.cpp  glxHandler.h  myGL.cpp
rts/Rendering/Models/: AssIO.h  AssParser.cpp  IModelParser.cpp
rts/Rendering/Textures/: TextureAtlas.cpp  TextureAtlas.h
rts/Rml/SolLua/bind/: Element.cpp
rts/Sim/MoveTypes/: GroundMoveType.cpp  HoverAirMoveType.cpp
rts/Sim/Path/: IPathController.cpp
rts/Sim/Path/QTPFS/: NodeLayer.cpp  NodeLayer.h  PathManager.cpp  PathSearch.cpp  PathSearch.h
rts/Sim/Units/CommandAI/: BuilderCAI.cpp
rts/Sim/Units/Scripts/: CobInstance.cpp  CobThread.cpp
rts/Sim/Units/UnitTypes/: Builder.cpp
rts/System/: CMakeLists.txt  Matrix44f.cpp  Matrix44f.h  MemPoolTypes.h  SafeUtil.h  SpringApp.cpp  SpringMath.h  float3.cpp  float3.h  float4.cpp  float4.h  simd_compat.h
rts/System/FileSystem/Archives/: DirArchive.cpp  SevenZipArchive.cpp  ZipArchive.cpp
rts/System/Input/: KeyInput.cpp  KeyInput.h  MouseInput.cpp
rts/System/Net/: Socket.cpp  Socket.h  UDPConnection.cpp
rts/System/Platform/: ThreadAffinityGuard.cpp  ThreadAffinityGuard.h  Threading.cpp
rts/System/Platform/Mac/: CpuTopology.cpp  CrashHandler.cpp  MacPresentBackend.h  MacPresentBackend.mm  MessageBox.cpp  MetalPresent.h  MetalPresent.mm  ThreadSupport.cpp
rts/System/Platform/Win/: WinVersion.cpp
rts/System/Sound/: CMakeLists.txt  ISound.h
rts/System/Sound/Null/: NullSound.h
rts/System/Sound/OpenAL/: MusicStream.cpp  Sound.cpp  Sound.h
rts/System/Sync/: DumpHistory.cpp  DumpState.cpp  SyncChecker.cpp  SyncChecker.h
rts/System/Threading/: ThreadPool.cpp  ThreadPool.h
rts/builds/dedicated/: CMakeLists.txt
rts/builds/headless/: CMakeLists.txt
rts/builds/legacy/: CMakeLists.txt
rts/lib/: CMakeLists.txt
rts/lib/assimp/include/assimp/: matrix3x3.inl  matrix4x4.inl  quaternion.inl  vector2.inl  vector3.inl
rts/lib/glad/: CMakeLists.txt
rts/lib/lua/: CMakeLists.txt
rts/lib/smmalloc/: smmalloc.h  smmalloc_generic.cpp
rts/lib/streflop/: CMakeLists.txt  streflop_cond.h
rts/lib/streflop/libm/: dbl64_system.cpp
rts/lib/streflop/libm/dbl-64/: math_config.h  s_sin.c  streflop_dbl64.cpp  w_acos.cpp  w_acosh.cpp  w_aliases.cpp  w_asin.cpp  w_atan.cpp  w_atan2.cpp  w_atanh.cpp  w_branred.cpp  w_cosh.cpp  w_exp.cpp  w_exp2.cpp  w_exp_data.cpp  w_expm1.cpp  w_globals.cpp  w_hypot.cpp  w_log.cpp  w_log10.cpp  w_log1p.cpp  w_log2.cpp  w_log2_data.cpp  w_log_data.cpp  w_math_err.cpp  w_pow.cpp  w_pow_log_data.cpp  w_sin.cpp  w_sinh.cpp  w_tan.cpp  w_tanh.cpp
rts/lib/streflop/libm/dbl-64/shim/: endian.h  fenv_private.h  fix-int-fp-convert-zero.h  libc-diag.h  libm-alias-double.h  libm-alias-finite.h  math-narrow-eval.h  math-svid-compat.h  math-underflow.h  math-use-builtins.h  math_private.h  nan-high-order-bit.h
scripts/: dfp-small.cpp  fastiroot_shim.cpp  gcc-dbl64-swap.sh
test/: AGENTS.md  CMakeLists.txt
test/other/: testMutex.cpp
test/synctest/: README.md  synctest-startscript.txt
test/validation/: prepare.sh
tools/DemoTool/: CMakeLists.txt  DemoTool.cpp
tools/benchmark/: script_benchmark_zwzsg.txt
tools/scripts/: runner.sh
tools/sync-test/reference/: README.md
tools/unitsync/: CMakeLists.txt
(+3 files in other folders)
